[package]
name = "sqlite"
version = "0.0.1"
authors = ["Amila Welihinda <amilajack@gmail.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "sqlite"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.10.1"

[dependencies]
neon = "0.3.1"

[dependencies.rusqlite]
path = "./src/rusqlite"
